# fastapi-vue3-starter-kit

./: .env.example  .gitignore  COMMANDS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  health.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: __init__.py  correlation_id.py  logging_middleware.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  base.py  user_repository.py
backend/app/schemas/: __init__.py  base.py  user.py
backend/app/services/: __init__.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: request.ts  user.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  user.ts
frontend/src/types/: user.ts
frontend/src/views/: Home.vue  Users.vue
nginx/: nginx.conf
scripts/: start-dev.ps1  start-dev.sh
